[package]
name = "dtln-rs"
version = "0.1.0"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "dtln-rs"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cxx = "1.0.71"
wav = "1.0.0"
byteorder = "1.4.3"
rand = "0.8.5"
once_cell = "1.9.0"
libc = "0.2.159"
num = "0.4.3"
anyhow = "1.0.89"
rustfft = { version = "6.2.0", features = ["avx"] }
realfft = "3.4.0"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]

[build-dependencies]
cmake = "0.1.48"
cc = "1.0"
cxx-build = "1.0.66"
build-target = "0.4.0"
